# rweb

./: .gitignore  Cargo.toml
app/: Cargo.toml
app/src/: lib.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
