[workspace]
resolver = "2"
members = ["app", "frontend", "server"]

# need to be applied only to wasm build
[profile.release]
lto = true
strip = true

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
panic = "abort"
codegen-units = 1

[workspace.dependencies]
leptos = { version = "0.7", features = ["islands"] }
leptos_meta = { version = "0.7"}
leptos_router = { version = "0.7" }
leptos_axum = { version = "0.7" }
axum = "0.7"
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
tokio = { version = "1", features = ["full"] }
wasm-bindgen = "=0.2.100"

# See https://github.com/leptos-rs/cargo-leptos for documentation of all the parameters.

# A leptos project defines which workspace members
# that are used together frontend (lib) & server (bin)
[[workspace.metadata.leptos]]
# this name is used for the wasm, js and css file names
name = "rweb"

# the package in the workspace that contains the server binary (binary crate)
bin-package = "server"

# the package in the workspace that contains the frontend wasm binary (library crate)
lib-package = "frontend"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

lib-profile-release = "wasm-release"

tailwind-input-file = "style/tailwind.css"